--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,3 +1,9 @@
-<div id="app"></div>
-<p>hey</p>
-<script src="./bundle.js"></script>
+<!DOCTYPE html>
+<html>
+    <body>
+        <div id="app"></div>
+        <script src="./grognard.js"></script>
+        <script src="./bop.js"></script>
+        <script src="./index.js"></script>
+    </body>
+</html>
