--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,8 +2,6 @@
 <html>
     <body>
         <div id="app"></div>
-        <script src="./grognard.js"></script>
-        <script src="./bop.js"></script>
-        <script src="./index.js"></script>
+        <script type="text/javascript" src="views/index.js" charset="utf-8"></script>
     </body>
 </html>
